option java_outer_classname = "LCServerStatusNoticeRes";
option java_package = "com.navinfo.opentsp.platform.location.protocol.platform.auth";

import "core/proto/common/java/PlatformResponseResult.proto";
import "core/proto/common/java/ServerStatus.proto";

message ServerStatusNoticeRes{
	required	int32	serialNumber				=1;
	required	PlatformResponseResult	results		=2;
	optional	string	channelIdentify				=3;
	required	ServerStatus	status				=4;
}
